BugFix, removed sidebar on mobile, still missing some info. TODO add the Navbar on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -159,3 +159,37 @@ i.sidebar-icon{
         page-break-after: always;
     }
 }
+
+@media screen and (max-width: 770px){
+    html, body{
+        padding-top: 0px;
+        padding-left: 0px;
+        padding-right: 0px;
+    }
+
+    div#sidebar.open{
+        max-width: 20%;
+        width: auto;
+        transition: all 600ms ease-out;
+    }
+
+    #content{
+        overflow: hidden;
+    }
+
+    #content .title{
+        font-size: 2.5rem;
+    }
+    
+    #content .subtitle{
+        font-size: 1.5rem;
+    }
+    
+    #content .paragraph{
+        font-size: 0.5rem;
+    }
+
+    #sidebar{
+        display: none;
+    }
+}
